2 - ¿Cómo crear rutas y agregar paginas con el plugin  HTML Webpack Plugin?

--- a/NodeJS/rutas-node-js-pagina-con-blog/src/cliente/index.html
+++ b/NodeJS/rutas-node-js-pagina-con-blog/src/cliente/index.html
@@ -12,10 +12,9 @@
 </head>
 
 <body>
-
     <!--Menus-->
     <header>
-        <nav id="id-menus" class="navbar navbar-expand-lg fixed-top navbar-light bg-transparent nav-scroll">
+        <nav id="id-menus" class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
             <a class="navbar-brand mx-5" href="/">EWebik</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,167 +39,133 @@
             </div>
         </nav>
     </header>
-    <!--Carrucel-->
-    <section class="mb-5">
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item ewk-cont-img-carousel active">
-                    <img src="/static/img/web.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="h2">Diseño de páginas web</h5>
-                        <p class="h2">Creamos increibles sitios web para impulsar tu negocio</p>
-                        <a href="/contacto.html" class="btn btn-primary my-5">Contactanos</a>
-                    </div>
-                    <div class="ewk-sombra"></div>
-                </div>
-                <div class="carousel-item ewk-cont-img-carousel">
-                    <img src="/static/img/desarrollo-movil.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="h2">Desarrollo de aplicaciones móviles</h5>
-                        <p class="h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="/contacto.html" class="btn btn-primary my-5">Contactanos</a>
-                    </div>
-                    <div class="ewk-sombra"></div>
-                </div>
-                <div class="carousel-item ewk-cont-img-carousel">
-                    <img src="/static/img/wordpress.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5 class="h2">WordPress</h5>
-                        <p class="h2">Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                        <a href="/contacto.html" class="btn btn-primary my-5">Contactanos</a>
-                    </div>
-                    <div class="ewk-sombra"></div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </section>
     <!--Contenido-->
-    <section class="container">
+    <section class="container ewk-contenido">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-9">
                 <main>
-                    <h1 class="my-5 text-center">Diseño de páginas web</h1>
-                    <div class="ewk-galeria-post">
-                        <div class="card">
-                            <div class="card-imagen">
-                                <img src="/static/img/f1.png" alt="...">
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">Card title that wraps to a new line</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
-                            </div>
-                        </div>
-                        <div class="card p-3">
-                            <blockquote class="blockquote mb-0 card-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
-                                    ante.
-                                </p>
-                                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
-                                <footer class="blockquote-footer">
-                                    <small class="text-muted">
-                                        Someone famous in <cite title="Source Title">Source Title</cite>
-                                    </small>
-                                </footer>
-                            </blockquote>
-                        </div>
-                        <div class="card">
-                            <div class="card-imagen">
-                                <img src="/static/img/f2.jpg" alt="...">
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to
-                                    additional content.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
-                            </div>
-                        </div>
-                        <div class="card bg-primary text-white text-center p-3">
-                            <blockquote class="blockquote mb-0">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.
-                                </p>
-                                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
-                                <footer class="blockquote-footer text-white">
-                                    <small>
-                                        Someone famous in <cite title="Source Title">Source Title</cite>
-                                    </small>
-                                </footer>
-                            </blockquote>
-                        </div>
-                        <div class="card text-center">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This card has a regular title and short paragraphy of text
-                                    below
-                                    it.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-imagen">
-                                <img src="/static/img/f3.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-imagen">
-                                <img src="/static/img/f4.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="card p-3 text-right">
-                            <blockquote class="blockquote mb-0">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
-                                    ante.
-                                </p>
-                                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
-                                <footer class="blockquote-footer">
-                                    <small class="text-muted">
-                                        Someone famous in <cite title="Source Title">Source Title</cite>
-                                    </small>
-                                </footer>
-                            </blockquote>
-                        </div>
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is another card with title and supporting text below. This
-                                    card has some additional content to make it slightly taller overall.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
-                            </div>
-                        </div>
-                    </div>
+                    <h1>Titulo de post - debe ser llamativo</h1>
+                    <div class="card">
+                        <img src="/static/img/f8.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere odio
+                                earum
+                                blanditiis sequi sapiente dolorum nam ratione incidunt exercitationem. Consectetur
+                                quidem
+                                nobis debitis possimus odit veritatis distinctio optio velit quaerat!</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere odio
+                                earum
+                                blanditiis sequi sapiente dolorum nam ratione incidunt exercitationem. Consectetur
+                                quidem
+                                nobis debitis possimus odit veritatis distinctio optio velit quaerat!</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere odio
+                                earum
+                                blanditiis sequi sapiente dolorum nam ratione incidunt exercitationem. Consectetur
+                                quidem
+                                nobis debitis possimus odit veritatis distinctio optio velit quaerat!</p>
 
-                    <div style="background-image: url(/static/img/f4.jpg)" class="p-5 ewk-img-fondo my-5">
-                        <div class="ewk-sombra" style="background: rgba(0, 0, 0, 0.1);"></div>
-                        <h2 class="display-4 text-white">Cotiza tu proyecto</h2>
-                        <p class="lead text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
-                            obcaecati amet facilis iusto
-                            quibusdam eius voluptatem voluptatum libero sit vel a asperiores atque, esse tempora nisi
-                            nostrum. Aspernatur, mollitia fuga.</p>
-                        <hr class="my-4">
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque eos
-                            neque suscipit
-                            deserunt, veniam in ullam eaque! Dignissimos obcaecati modi blanditiis iure, optio animi
-                            repellat omnis maxime possimus, quaerat quod.</p>
-                        <a class="btn btn-primary btn-lg" href="/contacto.html" role="button">Contactanos</a>
+                            <blockquote class="blockquote">
+                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere
+                                    erat a ante.</p>
+                                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
+                                        Title</cite></footer>
+                            </blockquote>
+
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere odio
+                                earum
+                                blanditiis sequi sapiente dolorum nam ratione incidunt exercitationem. Consectetur
+                                quidem
+                                nobis debitis possimus odit veritatis distinctio optio velit quaerat!</p>
+
+                            <figure class="text-center my-3">
+                                <img src="/static/img/f7.jpg" class="img-fluid" alt="...">
+                                <caption>Lorem ipsum dolor sit amet consectetur adipisicing elit</caption>
+                            </figure>
+
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere odio
+                                earum
+                                blanditiis sequi sapiente dolorum nam ratione incidunt exercitationem. Consectetur
+                                quidem
+                                nobis debitis possimus odit veritatis distinctio optio velit quaerat!</p>
+
+                            <div class="card my-5" style="max-width: 540px;">
+                                <div class="row no-gutters">
+                                    <div class="col-md-4">
+                                        <img src="/static/img/f5.jpg" class="card-img" alt="...">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">This is a wider card with supporting text below as a
+                                                natural lead-in to additional content. This content is a little bit
+                                                longer.
+                                            </p>
+                                            <p class="card-text"><small class="text-muted">Last updated 3 mins
+                                                    ago</small>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        </div>
                     </div>
                 </main>
+            </div>
+            <div class="col-md-3">
+
+                <h2>Categorías</h2>
+                <hr class="my-4">
+                <ul class="list-group list-group-flush bg-transparent">
+                    <li class="list-group-item d-flex justify-content-between align-items-center bg-transparent">
+                        <a href="/">Inicio</a></li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center bg-transparent">
+                        <a href="/contacto.html">Contacto</a></li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center bg-transparent">
+                        <a href="/blog.html">Blog</a>
+                        <span class="badge badge-primary badge-pill">10</span>
+                    </li>
+                </ul>
+
+                <h2 class="my-5 text-center">Mejores entradas a nuestro blog</h2>
+                <div class="ewk-galeria-side-blog">
+                    <div class="card">
+                        <div class="card-imagen">
+                            <img src="/static/img/f1.png" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title that wraps to a new line</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit longer.</p>
+                            <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
+                        </div>
+                    </div>
+                    <div class="card p-3">
+                        <blockquote class="blockquote mb-0 card-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                ante.
+                            </p>
+                            <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
+                            <footer class="blockquote-footer">
+                                <small class="text-muted">
+                                    Someone famous in <cite title="Source Title">Source Title</cite>
+                                </small>
+                            </footer>
+                        </blockquote>
+                    </div>
+                    <div class="card">
+                        <div class="card-imagen">
+                            <img src="/static/img/f2.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to
+                                additional content.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
