--- a/NodeJS/rutas-node-js-pagina-con-blog/src/cliente/contacto.html
+++ b/NodeJS/rutas-node-js-pagina-con-blog/src/cliente/contacto.html
@@ -43,7 +43,81 @@
 
     <!--Contenido-->
     <section class="container ewk-contenido">
-       
+        <div class="row">
+            <div class="col-md-6">
+                <main>
+                    <h1>Contactanos y cotiza tu proyecto</h1>
+                    <form>
+                        <div class="form-group">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" class="form-control" id="nombre" aria-describedby="Nombreh"
+                                placeholder="¿Cómo te llamas?">
+                            <small id="Nombreh" class="form-text text-muted">Nombre completo</small>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="Correo">Correo</label>
+                            <input type="text" class="form-control" id="Correo" aria-describedby="Correoh"
+                                placeholder="¿Cuál es tu correo?">
+                            <small id="Correoh" class="form-text text-muted">correo@correo.com</small>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="mensaje">Mensaje</label>
+                            <textarea class="form-control" id="mensaje" rows="3"></textarea>
+                        </div>
+
+                        <a id="idEnviarMensaje" href="#" class="btn btn-primary">Enviar mensaje</a>
+                    </form>
+                </main>
+            </div>
+            <div class="col-md-6">
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item  active">
+                            <img src="/static/img/web.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="h2">Diseño de páginas web</h5>
+                                <p class="h2">Creamos increibles sitios web para impulsar tu negocio</p>
+                                <a href="/contacto.html" class="btn btn-primary my-5">Contactanos</a>
+                            </div>
+                            <div class="ewk-sombra"></div>
+                        </div>
+                        <div class="carousel-item ">
+                            <img src="/static/img/desarrollo-movil.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="h2">Desarrollo de aplicaciones móviles</h5>
+                                <p class="h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="/contacto.html" class="btn btn-primary my-5">Contactanos</a>
+                            </div>
+                            <div class="ewk-sombra"></div>
+                        </div>
+                        <div class="carousel-item ">
+                            <img src="/static/img/wordpress.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="h2">WordPress</h5>
+                                <p class="h2">Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                                <a href="/contacto.html" class="btn btn-primary my-5">Contactanos</a>
+                            </div>
+                            <div class="ewk-sombra"></div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
     <!--Pie de página-->
     <footer class="ewk-footer py-5 mt-4">
