Actualización post.html de rutas en Node

--- a/NodeJS/rutas-node-js-pagina-con-blog/src/cliente/post.html
+++ b/NodeJS/rutas-node-js-pagina-con-blog/src/cliente/post.html
@@ -49,7 +49,173 @@
       </nav>
     </header>
     <!--Contenido-->
-    <section class="container ewk-contenido"></section>
+    <section class="container ewk-contenido">
+      <div class="row">
+        <div class="col-md-9">
+          <main>
+            <h1>Titulo de post - debe ser llamativo</h1>
+            <div class="card">
+              <img src="/static/img/f8.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Facere odio earum blanditiis sequi sapiente dolorum nam
+                  ratione incidunt exercitationem. Consectetur quidem nobis
+                  debitis possimus odit veritatis distinctio optio velit
+                  quaerat!
+                </p>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Facere odio earum blanditiis sequi sapiente dolorum nam
+                  ratione incidunt exercitationem. Consectetur quidem nobis
+                  debitis possimus odit veritatis distinctio optio velit
+                  quaerat!
+                </p>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Facere odio earum blanditiis sequi sapiente dolorum nam
+                  ratione incidunt exercitationem. Consectetur quidem nobis
+                  debitis possimus odit veritatis distinctio optio velit
+                  quaerat!
+                </p>
+
+                <blockquote class="blockquote">
+                  <p class="mb-0">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Integer posuere erat a ante.
+                  </p>
+                  <footer class="blockquote-footer">
+                    Someone famous in
+                    <cite title="Source Title">Source Title</cite>
+                  </footer>
+                </blockquote>
+
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Facere odio earum blanditiis sequi sapiente dolorum nam
+                  ratione incidunt exercitationem. Consectetur quidem nobis
+                  debitis possimus odit veritatis distinctio optio velit
+                  quaerat!
+                </p>
+
+                <figure class="text-center my-3">
+                  <img src="/static/img/f7.jpg" class="img-fluid" alt="..." />
+                  <caption>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit
+                  </caption>
+                </figure>
+
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Facere odio earum blanditiis sequi sapiente dolorum nam
+                  ratione incidunt exercitationem. Consectetur quidem nobis
+                  debitis possimus odit veritatis distinctio optio velit
+                  quaerat!
+                </p>
+
+                <div class="card my-5" style="max-width: 540px;">
+                  <div class="row no-gutters">
+                    <div class="col-md-4">
+                      <img
+                        src="/static/img/f5.jpg"
+                        class="card-img"
+                        alt="..."
+                      />
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">
+                          This is a wider card with supporting text below as a
+                          natural lead-in to additional content. This content is
+                          a little bit longer.
+                        </p>
+                        <p class="card-text">
+                          <small class="text-muted"
+                            >Last updated 3 mins ago</small
+                          >
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </main>
+        </div>
+        <div class="col-md-3">
+          <h2>Categorías</h2>
+          <hr class="my-4" />
+          <ul class="list-group list-group-flush bg-transparent">
+            <li
+              class="list-group-item d-flex justify-content-between align-items-center bg-transparent"
+            >
+              <a href="/">Inicio</a>
+            </li>
+            <li
+              class="list-group-item d-flex justify-content-between align-items-center bg-transparent"
+            >
+              <a href="/contacto.html">Contacto</a>
+            </li>
+            <li
+              class="list-group-item d-flex justify-content-between align-items-center bg-transparent"
+            >
+              <a href="/blog.html">Blog</a>
+              <span class="badge badge-primary badge-pill">10</span>
+            </li>
+          </ul>
+
+          <h2 class="my-5 text-center">Mejores entradas a nuestro blog</h2>
+          <div class="ewk-galeria-side-blog">
+            <div class="card">
+              <div class="card-imagen">
+                <img src="/static/img/f1.png" alt="..." />
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title that wraps to a new line</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
+              </div>
+            </div>
+            <div class="card p-3">
+              <blockquote class="blockquote mb-0 card-body">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Integer posuere erat a ante.
+                </p>
+                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
+                <footer class="blockquote-footer">
+                  <small class="text-muted">
+                    Someone famous in
+                    <cite title="Source Title">Source Title</cite>
+                  </small>
+                </footer>
+              </blockquote>
+            </div>
+            <div class="card">
+              <div class="card-imagen">
+                <img src="/static/img/f2.jpg" class="card-img-top" alt="..." />
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  This card has supporting text below as a natural lead-in to
+                  additional content.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </p>
+                <a class="btn btn-primary my-2" href="/post.html">Ver Post</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--Pie de página-->
     <footer class="ewk-footer py-5 mt-4">
       <div class="container-fluid">
